Administrator was allowed to create Product
